# PoolPtzControl

./: .gitignore  CMakeLists.txt  PtzCameraControl.cpp  PtzCameraControl.h  main.cpp
XNetSDK/include/: XBaseTypes.h  XNetSDK.h  XNetSDKDefine.h  XNetSDKSyn.h  XPlayDefPub.h  XPlaySDK.h  XSDKPublic.h
XNetSDK/include/Json_Header/: AVEnc_ChnDAModeState.h  AVEnc_VideoColor.h  AVEnc_VideoWidget.h  AlarmFunction.h  AlarmInfo.h  Alarm_AlarmOut.h  AudioFormat.h  BroadTrends.h  CFG_AUX.h  Camera_ClearFog.h  Camera_Param.h  Camera_ParamEx.h  ChannelTitle.h  ChannelTitleAttribute.h  ChannelTitleV2.h  CombEncodeInfo.h  CommFunction.h  CoverInfo.h  Covers.h  DSTEnd.h  DSTStart.h  Decoder.h  Detect_BlindDetect.h  Detect_HumanDetection.h  Detect_LossDetect.h  Detect_MotionDetect.h  EncodeCapability.h  EncodeFunction.h  EncodeInfo.h  EventHandler.h  ExposureParam.h  ExtraFormat.h  FbExtraStateCtrl.h  GainParam.h  General_AutoMaintain.h  General_General.h  General_Location.h  InputMethod.h  IntelDataWriteRsp.h  JObject.h  (+97 more)
